add sorting by deadline
